@@ -1,3 +1,7 @@
+2013-07-19  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* `django.contrib.messages` is now optional.
+
 2013-07-01  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.12.0 released.
